# libCRedirect

./: .gitignore  CMakeLists.txt  CRedirect_config.h.in  README.md
CRedirect/: CRedirect.h  CRedirect_export.h  CerrRedirect.hpp  ClogRedirect.hpp  CoutRedirect.hpp  StreamObserver.hpp  StreamRedirect.hpp  SynchronousStreamBuf.hpp
Examples/: CMakeLists.txt
Examples/LogFileWriter/: CMakeLists.txt  LogFileWriterConfig.h.in
Examples/LogFileWriter/src/: LogFileWriter.cpp  LogFileWriter.hpp  Logging.cpp  Logging.hpp  main.cpp
Tests/: CMakeLists.txt  CoutRedirectTest.cpp
src/: CerrRedirect.cpp  ClogRedirect.cpp  CoutRedirect.cpp  StreamRedirect.cpp  SynchronousStreamBuf.cpp
